# RC_BuildingSimulator

./: pyproject.toml
.github/workflows/: python-app.yml
examples/: annualSimulation.py  annualSimulation_importRadiation.py  calculateRadiation.py  hourSimulation.py  multiWall.py  sunAngles.py
notebooks/: 10-min-guide-to-first-simulation.ipynb  annualSimulation.ipynb
rc_buildingsimulator/: building_physics.py
rc_buildingsimulator/tests/: testExamples.py
